@@ -1,0 +1,4 @@
+{
+	"UI_Dir" : "./public",
+	"port" : 8080
+}
