@@ -1,0 +1,32 @@
+/****
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License. See accompanying LICENSE file.
+****/
+
+var express = require('express')
+var config = require('jsonconfig')
+var app = express()
+var path, port;
+try {
+  config.load(['./nodejs_conf.json'])
+  path = config.UI_Dir || './public';
+  port = config.port || 8080;
+} catch(err) {
+  process.stdout.write("err: " + err);
+  path = './public';
+  port = 8080;
+}
+app.use('/',express.static(path))
+app.listen(port);
+process.stdout.write("TEZ-UI server started on port " + port +
+                     "\n" + "Use CTRL+C to shutdown");
+
