@@ -80,6 +80,7 @@ Release 0.6.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2091. Add support for hosting TEZ_UI with nodejs.
   TEZ-2165. Tez UI: DAG shows running status if killed by RM in some cases.
   TEZ-2158. TEZ UI: Display dag/vertex names, and task/attempt index in breadcrumb.
   TEZ-2160. Tez UI: App tracking URL should support navigation back.
